# OOP-21-22

./: README.md
Antrenament/P1/: ListaParagrafe.cpp  ListaParagrafe.h  Procesator.h  ProcesatorNumaraCuvinte.h  main.cpp
Antrenament/P2/: CMakeLists.txt  Catalog.h  Student.cpp
Antrenament/P3/: CMakeLists.txt  Node.h  main.cpp
Antrenament/P4/: CMakeLists.txt  Calculator.h  Inmultire.h  Model.h  Scadere.cpp  main.cpp
Antrenament/P5/: Canvas.h  IPainter.h  Rect.cpp  Rect.h
Curs2/: Notite.txt
Curs5/: Notite.txt
Curs6/: Notite.txt  Notite.txt.save.1
Curs8/: notes.txt
Curs9/: notite.txt
Examen/Prob/: CMakeLists.txt  Phrase.cpp  Phrase.h  main.cpp
Laborator1/: P2.cpp
Laborator2/: Lab. 2.vcxproj  NumberList.h  main.cpp
Laborator2/P1/: NumberList.cpp
Laborator2/P2/: GlobalFunctions.cpp  GlobalFunctions.h  Lab2 (2).vcxproj  Lab2 (2).vcxproj.filters  Student.h  StudentMethods.cpp  main.cpp
Laborator2/Problem A/: Lab. 2.vcxproj
Laborator3/P1/: CMakeLists.txt  Math.cpp  Math.h  main.cpp
Laborator3/P2/: Canvas.h
Laborator4/P1/: CMakeLists.txt  Sort.cpp  Sort.h  main.cpp
Laborator5/P1/: CMakeLists.txt  Number.cpp  Number.h  (+1 more)
Laborator6/: CMakeLists.txt  Car.h  Circuit.cpp  Circuit.h  Dacia.cpp  Dacia.h  Ford.cpp  Ford.h  Mazda.cpp  Mazda.h  Mercedes.cpp  Mercedes.h  Toyota.cpp  Toyota.h  Weather.h  main.cpp
Laborator8/: CMakeLists.txt  input.in  main.cpp
Laborator9/: CMakeLists.txt  Element.h  Map.h  main.cpp
Training/P1/: CMakeLists.txt  Procesator.cpp  ProcesatorNumaraCuvinte.cpp  ProcesatorNumaraPropozitii.cpp  ProcesatorNumaraPropozitii.h
(+45 files in other folders)
